<resources>
    <string name="app_name">Panel de control</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Usuario</string>
    <string name="nav_header_subtitle">Panel de control</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="menu_pacientes">Pacientes</string>
    <string name="menu_medicos">Medicos</string>
    <string name="menu_farmacias">Farmacias</string>
    <string name="menu_medicamentos">Medicamentos</string>
    <string name="menu_farmaceuticas">Farmaceuticas</string>
    <string name="menu_contratos">Contratos</string>
    <string name="menu_inventarios">Inventarios</string>
    <string name="menu_recetas">Recetas</string>
</resources>