<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/btnPacientes"
        android:layout_width="@dimen/principal_width"
        android:layout_height="@dimen/principal_height"
        android:layout_marginStart="28dp"
        android:layout_marginTop="144dp"
        android:onClick="AbrirPanel"
        android:text="@string/menu_pacientes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnMedicos"
        android:layout_width="@dimen/principal_width"
        android:layout_height="@dimen/principal_height"
        android:layout_marginStart="24dp"
        android:layout_marginTop="144dp"
        android:onClick="AbrirPanel"
        android:text="@string/menu_medicos"
        app:layout_constraintStart_toEndOf="@+id/btnPacientes"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnFarmacias"
        android:layout_width="@dimen/principal_width"
        android:layout_height="@dimen/principal_height"
        android:layout_marginStart="28dp"
        android:layout_marginTop="10dp"
        android:onClick="AbrirPanel"
        android:text="@string/menu_farmacias"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnPacientes" />

    <Button
        android:id="@+id/btnFarmaceuticas"
        android:layout_width="@dimen/principal_width"
        android:layout_height="@dimen/principal_height"
        android:layout_marginStart="24dp"
        android:layout_marginTop="10dp"
        android:onClick="AbrirPanel"
        android:text="@string/menu_farmaceuticas"
        app:layout_constraintStart_toEndOf="@+id/btnFarmacias"
        app:layout_constraintTop_toBottomOf="@+id/btnMedicos" />

    <Button
        android:id="@+id/btnRecetas"
        android:layout_width="@dimen/principal_width"
        android:layout_height="@dimen/principal_height"
        android:layout_marginStart="28dp"
        android:layout_marginTop="17dp"
        android:onClick="AbrirPanel"
        android:text="@string/menu_recetas"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnFarmacias" />

    <Button
        android:id="@+id/btnInventarios"
        android:layout_width="@dimen/principal_width"
        android:layout_height="@dimen/principal_height"
        android:layout_marginStart="27dp"
        android:layout_marginTop="9dp"
        android:onClick="AbrirPanel"
        android:text="@string/menu_inventarios"
        app:layout_constraintStart_toEndOf="@+id/btnRecetas"
        app:layout_constraintTop_toBottomOf="@+id/btnFarmaceuticas" />

    <Button
        android:id="@+id/btnContratos"
        android:layout_width="@dimen/principal_width"
        android:layout_height="@dimen/principal_height"
        android:layout_marginStart="28dp"
        android:layout_marginTop="15dp"
        android:onClick="AbrirPanel"
        android:text="@string/menu_contratos"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnRecetas" />

    <Button
        android:id="@+id/btnMedicamentos"
        android:layout_width="@dimen/principal_width"
        android:layout_height="@dimen/principal_height"
        android:layout_marginStart="24dp"
        android:layout_marginTop="23dp"
        android:onClick="AbrirPanel"
        android:text="@string/menu_medicamentos"
        app:layout_constraintStart_toEndOf="@+id/btnContratos"
        app:layout_constraintTop_toBottomOf="@+id/btnInventarios" />

    <HorizontalScrollView
        android:layout_width="wrap_content"
        android:layout_height="74dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="408dp"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnOpciones"
                android:layout_width="208dp"
                android:layout_height="wrap_content"
                android:onClick="AbrirPanel"
                android:text="Opciones" />

            <Button
                android:id="@+id/btnVistas"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="AbrirPanel"
                android:text="Vistas" />

        </LinearLayout>
    </HorizontalScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>